TRIED TO FIX ALIGNMENT

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 img {
     flex-shrink: 0;
 }
-p{
+.text{
 color: var(--Main-Black, var(--Main-Black, #000));
 text-align: center;
 font-family: Alexandria;
@@ -36,4 +36,5 @@ line-height: normal;
 
 h1 {
     text-align: left;
+    font-family: Alexandria;
 }
